# Fluxy

./: .gitignore  Cargo.toml  README.md  SOURCES.md  mongo_documentation.txt
rtc-app/: components.json  next.config.ts  package-lock.json  package.json
rtc-app/app/: layout.tsx  page.tsx
rtc-app/app/api/connected-users/: route.ts
rtc-app/app/channels/: page.tsx
rtc-app/app/components/: ChannelChat.tsx  Channels.tsx  CreateChannel.tsx  CreateServeur.tsx  DeleteServeur.tsx  Forgotpwd.tsx  HomePage.tsx  HomePage2.tsx  JoinServeur.tsx  LeaveServeur.tsx  LoginForm.tsx  MemberServeur.tsx  ModifyChannel.tsx  ModifyServeur.tsx  Profil.tsx  ProfileCard.tsx  RegisterForm.tsx  RolesServeur.tsx  Sendchat.tsx  SettingHome.tsx
rtc-app/app/create-serveur/: page.tsx
rtc-app/app/dashboard/: page.tsx
rtc-app/app/delete-serveur/: page.tsx
rtc-app/app/forgot-sent/: page.tsx
rtc-app/app/forgotpassword/: page.tsx
rtc-app/app/home/: page.tsx
rtc-app/app/join-serveur/: page.tsx
rtc-app/app/leave-serveur/: page.tsx
rtc-app/app/logout/: page.tsx
rtc-app/app/modify-channel/: page.tsx
rtc-app/app/modify-serveur/: page.tsx
rtc-app/app/profil/: page.tsx
rtc-app/app/register/: page.tsx
rtc-app/app/reset-password/: page.tsx
rtc-app/app/sendchat/: page.tsx
rtc-app/public/: right.png.sb-f8482d26-CLeWWj  stitch 1.avif
src/: chat.rs  config.rs  db_mongo_connection.rs  db_mongo_delete.rs  db_mongo_getter.rs  db_mongo_setter.rs  db_mongo_update.rs  getters.rs  handlers.rs  lib.rs  main.rs  models.rs  supabase.rs
tests/: mongo_test.rs  supabase_test.rs
(+16 files in other folders)
