[package]
name = "T-JSF-600-MAR_1"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-web-lab = "0.20"
actix = "0.13"
actix-web-actors = "4"
actix-files = "0.6"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
vercel_runtime = { version = "1.1.0" }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
futures-util = "0.3"
chrono = "0.4.43"
chrono-tz = "0.6"
rand = "0.9.2"
once_cell = "1.20"

[dependencies.mongodb]
version = "3.5.0"
features = ["snappy-compression"]

# Configuration pour éviter la concurrence entre tests
# Les tests MongoDB s'exécutent séquentiellement pour éviter les conflits
[[test]]
name = "mongo_test"
harness = true
# Note: Pour exécuter séquentiellement, utilisez: cargo test --test mongo_test -- --test-threads=1